--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -80,12 +80,12 @@
         <footer class=" flex w-screen justify-center align-center bg-rose-500 h-20">
             <div class=" container flex w-full justify-between items-center px-5">
                 <div class="">
-                    <p class="text-sm sm:text-lg text-white">A Django project by Carl Murray</p>
+                    <p class="text-sm font-thin text-white">A Django project by <span class="font-normal">Carl Murray</span></p>
                 </div>
                 <div class=" flex items-center gap-6 justify-between px-4">
-                    <a href="#" class="text-white">Link</a>
-                    <a href="#" class="text-white">Link</a>
-                    <a href="#" class="text-white">Link</a>
+                    <a href="https://carlmurray.design/" class="text-white"><img src="{% static 'img/footer/footer-portfolio-icon.svg' %}" alt="Portfolio icon"></a>
+                    <a href="https://github.com/CarlMurray/flyUX-pp4" class="text-white"><img src="{% static 'img/footer/footer-github-icon.svg' %}" alt=""></a>
+                    <a href="https://www.linkedin.com/in/carljmurray/" class="text-white"><img src="{% static 'img/footer/footer-linkedin-icon.svg' %}" alt=""></a>
                 </div>
             </div>
         </footer>
