--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -18,7 +18,7 @@
                                required
                                placeholder="Email"
                                id="id_email"
-                               class="h-12 px-4 rounded-2xl  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-rose-500">
+                               class="h-12 px-4 rounded-2xl  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-rose-500 focus:outline-0 focus:ring-0">
                     </div>
                     <!-- PASSWORD FIELD -->
                     <div class="flex flex-col">
@@ -29,7 +29,7 @@
                                required
                                placeholder="Password"
                                id="id_password"
-                               class="h-12 px-4 rounded-2xl  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-rose-500">
+                               class="h-12 px-4 rounded-2xl  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-rose-500 focus:outline-0 focus:ring-0">
                     </div>
                     <button type="submit"
                             class="bg-rose-500 py-auto px-6 rounded-full h-12 flex items-center font-bold text-white text-center justify-center">
