style: add Flatpickr date picker

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -11,6 +11,12 @@
         <!-- FLOWBITE CSS FRAMEWORK -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.css"
               rel="stylesheet" />
+        <!-- FLATPICKR DATE PICKER -->
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/flatpickr/dist/themes/airbnb.css">
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     </head>
     <body class="flex flex-col justify-between h-screen">
         <header class="flex items-center w-full mx-auto h-20 bg-rose-500 relative">
